# keycloak-provisioner

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  index.html  index.yaml  keycloak-provisioner-0.1.1.tgz  keycloak-provisioner-0.1.10.tgz  keycloak-provisioner-0.1.11.tgz  keycloak-provisioner-0.1.12.tgz  keycloak-provisioner-0.1.14.tgz  keycloak-provisioner-0.1.15.tgz  keycloak-provisioner-0.1.16.tgz  keycloak-provisioner-0.1.3.tgz  keycloak-provisioner-0.1.4.tgz  keycloak-provisioner-0.1.5.tgz  keycloak-provisioner-0.1.6.tgz  keycloak-provisioner-0.1.7.tgz  keycloak-provisioner-0.1.8.tgz  keycloak-provisioner-0.1.9.tgz  kopf-docs.rst  pyproject.toml
.github/workflows/: docker.yml  helm.yml  lint.yml  tag.yml
chart/keycloak-provisioner/: Chart.yaml  values.yaml
chart/keycloak-provisioner/crds/: keycloakclients.yaml  keycloakrealmgroups.yaml  keycloakrealms.yaml  keycloakusers.yaml
chart/keycloak-provisioner/templates/: deployment.yaml  rbac.yaml
controller/: clients.py  common.py  groups.py  main.py  realms.py  users.py
